glade_DATA = \
	admin.glade 			\
	admin-wizard.glade		\
	authenticate.glade		\
	connection-dialog.glade		\
	connections.glade		\
	greeter-initial.glade		\
	greeter-connect_to_existing.glade	\
	greeter-authenticate.glade	\
	greeter-load_connection.glade	\
	greeter-start_new.glade         \
	greeter-start_new_error.glade 	\
	greeter-start_new_success.glade \
	open-connection.glade		\
	spyglass.glade			\
	videotest.glade			\
	wizard.glade 			\
	wizard_audiotest.glade		\
	wizard_audio_encoder.glade	\
	wizard_consumption.glade	\
	wizard_disk.glade		\
	wizard_encoding.glade		\
	wizard_firewire.glade		\
	wizard_http.glade		\
	wizard_jpeg.glade		\
	wizard_license.glade		\
	wizard_overlay.glade		\
	wizard_overview.glade		\
	wizard_shout2.glade		\
	wizard_smoke.glade		\
	wizard_soundcard.glade		\
	wizard_source.glade		\
	wizard_summary.glade		\
	wizard_testsource.glade		\
	wizard_theora.glade		\
	wizard_tvcard.glade		\
	wizard_webcam.glade		\
	wizard_welcome.glade		\
	wizard_vorbis.glade

gladedir = $(pkgdatadir)/glade

EXTRA_DIST = $(glade_DATA) $(testfiles)
