glade_DATA = \
	admin.glade 			\
	admin-wizard.glade		\
	authenticate.glade		\
	connection-dialog.glade		\
	connections.glade		\
	greeter-initial.glade		\
	greeter-connect_to_existing.glade	\
	greeter-authenticate.glade	\
	greeter-load_connection.glade	\
	greeter-start_new.glade         \
	greeter-start_new_error.glade 	\
	greeter-start_new_success.glade \
	open-connection.glade		\
	videotest.glade			\
	wizard.glade 			\
	wizard_audio_encoder.glade	\
	wizard_consumption.glade	\
	wizard_encoding.glade		\
	wizard_license.glade		\
	wizard_overlay.glade		\
	wizard_overview.glade		\
	wizard_production.glade		\
	wizard_summary.glade		\
	wizard_welcome.glade

gladedir = $(pkgdatadir)/glade

EXTRA_DIST = $(glade_DATA) $(testfiles)
