glade_DATA =					\
	admin.glade				\
	admin-wizard.glade			\
	authenticate.glade			\
	connection-dialog.glade			\
	connections.glade			\
	debug-marker.glade			\
	greeter-initial.glade			\
	greeter-connect_to_existing.glade	\
	greeter-authenticate.glade		\
	greeter-load_connection.glade		\
	greeter-start_new.glade			\
	greeter-start_new_error.glade		\
	greeter-start_new_success.glade		\
	open-connection.glade			\
	videotest.glade				\
	sectionwizard.glade			\
	audio-encoder-wizard.glade		\
	consumption-wizard.glade		\
	encoding-wizard.glade			\
	license-wizard.glade			\
	loadflow-wizard.glade			\
	ondemand-wizard.glade			\
	overlay-wizard.glade			\
	overview-wizard.glade			\
	production-wizard.glade			\
	scenario-wizard.glade			\
	select-producers-wizard.glade		\
	summary-wizard.glade			\
	welcome-wizard.glade

gladedir = $(pkgdatadir)/glade

EXTRA_DIST = $(glade_DATA) $(testfiles)
