image_DATA = 		\
	consumption.png \
	firewire.png 	\
	flow.png	\
	licenses.png 	\
	looper.png 	\
	kcmdevices.png 	\
	overlay.png 	\
	placeholder.png \
	soundcard.png 	\
	source.png 	\
	summary.png	\
	testsource.png 	\
	tv.png		\
	webcam.png 	\
	widget_doc.png	\
	wizard.png	\
	xiphfish.png

imagedir = $(pkgdatadir)/image/wizard

EXTRA_DIST = $(image_DATA)
