image_DATA = 		  \
	consumption.png   \
	firewire.png 	  \
	flow.png	  \
	looper.png 	  \
	kcmdevices.png 	  \
	overlay.png 	  \
	pattern_black.png \
	pattern_blink.png \
	pattern_smpte.png \
	pattern_snow.png  \
	placeholder.png   \
	soundcard.png 	  \
	source.png 	  \
	summary.png	  \
	testsource.png 	  \
	tv.png		  \
	webcam.png 	  \
	widget_doc.png	  \
	wizard.png	  \
	xiphfish.png

imagedir = $(pkgdatadir)/image/wizard

EXTRA_DIST = $(image_DATA)
