include $(top_srcdir)/common/python.mk
                                                                                
combinersdir = $(libdir)/flumotion/python/flumotion/component/combiners
combiners_PYTHON = \
	__init__.py

TAGS_FILES = $(component_PYTHON)

clean-local:
	rm -rf *.pyc *.pyo

SUBDIRS = \
	composite \
	switch
